# getmebuddy

./: .env  README.md  manage.py  pyproject.toml
.github/workflows/: ci-cd.yml  frontend-ci-cd.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/nginx/: nginx.conf
engagement/: urls.py  views.py
getmebuddy/: asgi.py  settings.py  urls.py  wsgi.py
matching/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
matching/migrations/: 0001_initial.py
messaging/: admin.py  consumers.py  models.py  routing.py
messaging/migrations/: 0001_initial.py
monetization/: apps.py  models.py
profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
profiles/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
